--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# PostgreSQL connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/kalil_school_system
+spring.datasource.username=schooluser
+spring.datasource.password=12345
+# Hibernate properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
