--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=12345
 # Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#Spring Security Credentials
+spring.security.user.name=dev
+spring.security.user.password={bcrypt}1
+#Swagger configuration
+#springdoc.swagger-ui.enabled=false
+api-docs.enabled=false
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.path=/docs
