implemented user login in the application and improved some logics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #Spring Security Credentials
 spring.security.user.name=dev
-spring.security.user.password={bcrypt}1
+spring.security.user.password=1
 #Swagger configuration
-#springdoc.swagger-ui.enabled=false
-api-docs.enabled=false
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.path=/docs
