--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# PostgreSQL connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/kalil_school_system
-spring.datasource.username=schooluser
-spring.datasource.password=12345
-# Hibernate properties
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #Spring Security Credentials
 spring.security.user.name=dev
 spring.security.user.password=1
